css/index-combined-navigation-autoplay-pause-btn-contstant.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  position: relative;
  height: 100svh;
  overflow: hidden;
}

body {
  background: black;
  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
  font-size: 14px;
  color: black;
}

/* Prevent any scrollbars */
::-webkit-scrollbar {
  display: none;
}

.swiper {
  position: relative;
  width: 100%;
  height: 100%;
  /* below was to fix flash of getting wrong title when refreshing page.  Initially hides Swiper */
  opacity: 0;
  transition: opacity 0.3s ease;
}

/* Show Swiper when initialized.  Fixes flash of getting wrong title when refreshing page */
.swiper.swiper-initialized {
  opacity: 1;
}

.swiper-slide {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: black;
  height: 100svh;
  width: 100%;
  /* Apply below to make images a long touch not open native features */
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  /* To work with Swiper Zoom */
  touch-action: auto;
  overflow: auto;
  position: relative;
  overflow: hidden;
}

/* Title Row at top of page */
.title-row {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 10px;
  cursor: default;
  overflow: visible;
  z-index: 200;
}

/* Hides the elements detailed in javascript when clicking on page and toggling the page.  It will toggle the close-btn, title, pencil, add a caption, options-btn, play / pause button, left, right and down arrows, and counter.  Keeps clean look on page. */
.hidden-element {
  display: none !important;
}

/* Circular background part of button that appears behind close button */
.close-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 28px;
  height: 28px;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 50%;
  left: 9px;
  cursor: pointer;
  border: none;
  position: absolute;
  z-index: 300;
}

/* The lines of the "X". */
.close-btn .x-line::before,
.close-btn .x-line::after {
  content: "";
  position: absolute;
  width: 18px;
  height: 2px;
  background-color: white;
  top: 50%;
  left: 50%;
  transform-origin: center;
}

/* First line of the 'X' */
.close-btn .x-line::before {
  transform: translate(-50%, -50%) rotate(45deg);
}

/* Second line of the 'X' */
.close-btn .x-line::after {
  transform: translate(-50%, -50%) rotate(-45deg);
}

.pencil-title-row {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 28px;
  cursor: pointer;
}

.pencil-container {
  position: relative;
  display: inline-block;
  cursor: pointer;
  z-index: 300;
}

/* Pencil Icon */
.pencil {
  height: 18px;
  width: auto;
  margin-right: -14px;
  filter: drop-shadow(1px 1px 2px rgba(22, 22, 22, 0.5))
    drop-shadow(2px 2px 4px rgba(27, 27, 27, 0.3))
    drop-shadow(0px 0px 5px rgba(44, 44, 44, 0.25));
  -webkit-tap-highlight-color: transparent; /* Prevent tap highlight */
}

.add-new-caption {
  position: relative;
  cursor: pointer;
  z-index: 300;
  display: inline-block;
  padding: 14px;
}

.media-item-title {
  font-weight: 400;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: white;
  letter-spacing: 0.04rem;
  margin-left: 10px;
  margin-right: 10px;
  /* same text shadow as pencil and counter number-of-items-text */
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5),
    /* Primary shadow */ 2px 2px 4px rgba(0, 0, 0, 0.3),
    /* Secondary shadow */ 0px 0px 5px rgba(0, 0, 0, 0.25); /* Glow effect */
}

/* Circular background part of button that appears behind options button's 3 Vertical Dots */
.options-btn {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 28px;
  height: 28px;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 50%;
  position: absolute;
  right: 9px;
  cursor: pointer;
  border: none;
  gap: 0.158rem;
  z-index: 300;
}

/* The 3 Vertical Dots inside Options button */
.dot {
  width: 4px;
  height: 4px;
  background-color: white;
  border-radius: 50%;
}

/* Dropdown from Options button */
/* Initially hide links */
.options-dropdown {
  display: none;
  flex-direction: column;
  justify-content: flex-start;
  background-color: rgba(0, 0, 0, 0.9);
  color: white;
  border: 1px solid rgba(128, 128, 128, 0.6);
  padding: 20px 4px 18px 4px;
  border-radius: 4px;
  position: fixed;
  width: 220px;
  z-index: 400;
  transition: opacity 0.3s ease, transform 0.3s ease;
}

.options-dropdown.open {
  display: flex;
  opacity: 1;
  transform: translateY(0);
}

.swiper-vertical-options-dropdown {
  position: fixed;
  top: 10px;
  right: 10px;
}

/* List of Links in the dropdown from Options button */
.options-dropdown li {
  display: block;
  padding: 6px 20px;
  color: white;
  text-decoration: none;
  margin-top: 2px;
  cursor: pointer;
}

.options-dropdown li:hover {
  background-color: #3f3f3f;
}

.options-dropdown.open {
  display: flex;
  opacity: 1;
  transform: translateY(0);
}

/* Options dropdown Close Button (X) */
.dropdown-close-btn {
  position: absolute;
  top: 2px;
  right: 8px;
  background: none;
  border: none;
  color: white;
  font-size: 26px;
  cursor: pointer;
  padding: 4px 8px 5px 5px;
}

/* Play/Pause Toggle Button */
.autoplay-toggle {
  position: fixed;
  bottom: 16px;
  left: 9px;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 28px;
  height: 28px;
  background: transparent;
  border: none;
  cursor: pointer;
  transition: background-color 0.3s ease;
  overflow: visible;
  z-index: 300;
  outline: none;
}
/* ... */

